# clock_for_filimonov

./: .gitignore  README.md  manual.dwg
Firmware/: CMakeLists.txt  pc.cmake
Firmware/b/: CMakeCache.txt  Makefile  cmake_install.cmake
Firmware/pcbuild_cmake/: CMakeLists.txt
Firmware/src/: app.c  app.h  blink.c  blink.h  hal.c  hal.h  hal_pc.c  lk.c  lk.h  main.c  random.c  random.h  rtc.c  rtc.h  timer.c  timer.h  twimaster.c
Hardware/: BOT.Cam  LED.SchDoc  PCB.PcbDoc.htm  PSU.SchDoc  TOP.Cam  clock_for_filimonov.PrjPcb  reflector.DWG  reflector.SLDDRW  reflector.SLDPRT
Hardware/Project Outputs for clock_for_filimonov/: Design Rule Check - PCB.drc  Design Rule Check - PCB.html  Design Rule Check - Юстировка фоторезиста.drc  Design Rule Check - Юстировка фоторезиста.html  PCB-macro.APR_LIB  PCB.EXTREP  PCB.REP  PCB.RUL  PCB.apr  PCB_Copper_Signal_Bot.gbr  PCB_Copper_Signal_Top.gbr  PCB_Mechanical_3.gbr  PCB_NPTH_Drill.gbr  PCB_PTH_Drill.gbr  Status Report.Txt  Юстировка фоторезиста.EXTREP  Юстировка фоторезиста.GTL  Юстировка фоторезиста.RUL  Юстировка фоторезиста.apr
Hardware/Project Outputs for clock_for_filimonov/Gerber/: Юстировка фоторезиста.EXTREP  Юстировка фоторезиста.GD1  Юстировка фоторезиста.GTL  Юстировка фоторезиста.REP
Hardware/Project Outputs for clock_for_filimonov/Gerber/__Previews/: Юстировка фоторезиста.REPPreview
Hardware/Project Outputs for clock_for_filimonov/NC Drill/: Юстировка фоторезиста.DRR  Юстировка фоторезиста.LDP  Юстировка фоторезиста.TXT
Hardware/Project Outputs for clock_for_filimonov/NC Drill/__Previews/: Юстировка фоторезиста.LDPPreview
Hardware/__Previews/: LED.SchDocPreview  PCB.PcbDocPreview  PSU.SchDocPreview
